--- a/site/index.njk
+++ b/site/index.njk
@@ -13,8 +13,9 @@ title: Welcome to my site!
             <div class="avatar w-40 h-40"></div>
             <h2>Robert Shenton</h2>
             <p>Programmer, writer, game developer</p>
-            <img class="w-5 h-5 inline" src="images/icons/twitter.svg" />
-            <a href="https://twitter.com/miltage">@Miltage</a>
+            <div><img class="w-5 h-5 inline" src="images/icons/pin.svg" /> Cape Town</div>
+            <div class="mb-2"><img class="w-5 h-5 inline" src="images/icons/twitter.svg" />
+            <a href="https://twitter.com/miltage">@miltage</a></div>
         </div>
     </section>
 
@@ -26,7 +27,7 @@ title: Welcome to my site!
 
         <div class="content">
 
-            <p>Make yourself at home.</p>
+            <p>Please, make yourself at home.</p>
 
             <h2 class="text-3xl">Things I've worked on</h2>
 
