--- a/resources/sass/components/_items.scss
+++ b/resources/sass/components/_items.scss
@@ -8,13 +8,13 @@
 item {
   display: inline-block;
   transition: 0.25s all ease-out;
-  background-size: 200%;
+  background-size: 100%;
   filter: opacity(0.5) grayscale(0.5);
   -webkit-filter: opacity(0.5) grayscale(0.5);
-  @apply w-24 h-24 bg-gray-400 rounded-lg bg-center bg-no-repeat m-2;
+  @apply w-24 h-24 bg-gray-400 rounded-lg bg-center bg-no-repeat m-2 cursor-pointer;
 
   &:hover {
-    background-size: 220%;
+    background-size: 120%;
     filter: opacity(1) grayscale(0);
     -webkit-filter: opacity(1) grayscale(0);
   }
