--- a/site/index.njk
+++ b/site/index.njk
@@ -36,7 +36,7 @@ title: Welcome to my site!
 
                 {% for item in collections.project %}
 
-                    <a href="{{ item.url }}"><item style="background-image: url('{{ item.data.featured_image }}')"></item></a>
+                    <a href="{{ item.url }}"><item style="background-image: url('{{ item.data.icon }}')"></item></a>
 
                 {% endfor %}
 
