Add Github profile link

--- a/site/includes/components/sidebar.njk
+++ b/site/includes/components/sidebar.njk
@@ -6,6 +6,8 @@
         <div><img class="w-5 h-5 inline" src="images/icons/pin.svg" /> Cape Town</div>
         <div class="m-1"><img class="w-5 h-5 inline" src="images/icons/twitter.svg" />
         <a href="https://twitter.com/miltage">@miltage</a></div>
+        <div class="m-1"><img class="w-5 h-5 inline" src="images/icons/github.svg" />
+        <a href="https://github.com/miltage">Miltage</a></div>
     </div>
 </section>
 
