--- a/site/includes/layouts/project.njk
+++ b/site/includes/layouts/project.njk
@@ -14,6 +14,14 @@ layout: default
 
             <p>{{ caption }}</p>
 
+            {% if featured_image %}
+
+                <img data-lazy="{{ featured_image }}" alt="{{ image_caption }}">
+
+                <div class="separator"></div>
+
+            {% endif %}
+
             {{ content | safe }}
 
         </div>
