--- a/site/includes/layouts/post.njk
+++ b/site/includes/layouts/post.njk
@@ -3,7 +3,9 @@ layout: default
 ---
 
 {# a post layout #}
-<main id="main" class="main inner flex flex-1 flex-col py-10 lg:py-20 focus:outline-none" tabindex="-1">
+<main id="main" class="main inner flex flex-1 flex-row py-10 lg:py-20 focus:outline-none" tabindex="-1">
+
+    {% include "components/sidebar.njk" %}
 
     <section id="container-centre" class="column centre flex-1">
 
@@ -12,10 +14,6 @@ layout: default
             <h1 class="page-title text-3xl md:text-center md:text-5xl lg:text-6xl">{{ title }}</h1>
 
             <div class="text-sm md:text-base text-gray-600 flex justify-center">
-
-                <p class="author">By {{ site.author.name }}</p>
-
-                <p class="px-2">—</p>
 
                 <time datetime="{{ date }}">
                     {{ date | dateDisplay }}
@@ -90,14 +88,6 @@ layout: default
 
             {% endif %}
 
-        </div>
-
-        <div class="mt-16 md:px-16">
-
-            <div class="flex justify-between mt-16 border-t border-gray-200 pt-12">
-                {% if prevPost %}<p class="text-gray-700 text-sm"><span>Previous:</span> <a href="{{ prevPost.url }}">{{ prevPost.data.title }}</a></p>{% endif %}
-                {% if nextPost %}<p class="text-gray-700 text-sm"><span>Next:</span> <a href="{{ nextPost.url }}">{{ nextPost.data.title }}</a></p>{% endif %}
-            </div>
         </div>
 
     </section>
