--- a/site/index.njk
+++ b/site/index.njk
@@ -7,7 +7,7 @@ title: Greetings, weary traveller!
 subtitle: Please, do come in...
 ---
 
-<main id="main" class="main inner flex flex-1 flex-row justify-around py-10 lg:py-20 focus:outline-none" tabindex="-1">
+<main id="main" class="main inner flex flex-1 flex-col md:flex-row justify-around py-10 lg:py-20 focus:outline-none" tabindex="-1">
 
     {% include "components/sidebar.njk" %}
 
