--- a/resources/sass/base/_sidebar.scss
+++ b/resources/sass/base/_sidebar.scss
@@ -2,9 +2,13 @@
 //==========  Siderbar  ==========//
 
 #sidebar {
-  width: 180px;
+  width: 100%;
 
-  .fixed {
+  @media (min-width: 768px) {
+    width: 180px;
+  }
+
+  .md\:fixed {
     width: inherit;
   }
 
