--- a/site/blog.njk
+++ b/site/blog.njk
@@ -6,7 +6,7 @@ body_class: blog
 title: Robert's Ramblings
 ---
 
-<main id="main" class="main inner flex flex-1 flex-row py-10 lg:py-20 focus:outline-none" tabindex="-1">
+<main id="main" class="main inner flex flex-1 flex-col md:flex-row py-10 lg:py-20 focus:outline-none" tabindex="-1">
 
     {% include "components/sidebar.njk" %}
 
