--- a/site/includes/layouts/post.njk
+++ b/site/includes/layouts/post.njk
@@ -3,7 +3,7 @@ layout: default
 ---
 
 {# a post layout #}
-<main id="main" class="main inner flex flex-1 flex-row py-10 lg:py-20 focus:outline-none" tabindex="-1">
+<main id="main" class="main inner flex flex-1 flex-col md:flex-row py-10 lg:py-20 focus:outline-none" tabindex="-1">
 
     {% include "components/sidebar.njk" %}
 
