--- a/site/tags.njk
+++ b/site/tags.njk
@@ -11,7 +11,7 @@ pagination:
 permalink: /category/{{ category }}/
 ---
 
-<main id="main" class="main inner flex flex-1 flex-row py-10 lg:py-20 focus:outline-none" tabindex="-1">
+<main id="main" class="main inner flex flex-1 flex-col md:flex-row py-10 lg:py-20 focus:outline-none" tabindex="-1">
 
     {% include "components/sidebar.njk" %}
 
