--- a/site/index.njk
+++ b/site/index.njk
@@ -4,7 +4,7 @@ meta_title: Home
 meta_description: Personal site of Robert Shenton
 body_class: home
 title: Greetings, weary traveller!
-subtitle: Please, do come in...
+subtitle: Make yourself at home...
 ---
 
 <main id="main" class="main inner flex flex-1 flex-col md:flex-row justify-around py-10 lg:py-20 focus:outline-none" tabindex="-1">
@@ -40,7 +40,7 @@ subtitle: Please, do come in...
 
                 {% for post in collections.blog %}
 
-                <li class="mb-1"><a href="{{ post.url }}">{{ post.data.date | dateDisplay + ' - ' + post.data.title }}</a></li>
+                <li class="mb-1"><a href="{{ post.url }}">{{ post.data.date | htmlDateDisplay + ' - ' + post.data.title }}</a></li>
 
                 {% endfor %}
 
