Hide unused pages

--- a/site/about.njk
+++ b/site/about.njk
@@ -4,6 +4,7 @@ meta_title: About
 meta_description: About page description
 body_class: about
 title: About
+hidden: true
 ---
 
 <main id="main" class="main inner flex flex-1 flex-col py-10 lg:py-20 focus:outline-none" tabindex="-1">
