--- a/site/contact.njk
+++ b/site/contact.njk
@@ -4,6 +4,7 @@ meta_title: Contact
 meta_description: Contact page description
 body_class: contact
 title: Contact Us
+hidden: true
 ---
 
 <main id="main" class="main inner flex flex-1 flex-col py-10 lg:py-20 focus:outline-none" tabindex="-1">
