--- a/css/main.css
+++ b/css/main.css
@@ -729,12 +729,16 @@ pre {
 
 pre code {
   padding: 0;
+  margin: 0;
+  line-height: normal;
 }
 
 code {
   background-color: #35495e;
   color: #f6f4e6;
   padding: 4px 6px;
+  margin: 2px;
+  line-height: 2rem;
   border-radius: 5px;
 }
 
