--- a/resources/sass/base/_typography.scss
+++ b/resources/sass/base/_typography.scss
@@ -54,6 +54,8 @@ pre {
   margin-bottom: 30px;
   code {
     padding: 0;
+    margin: 0;
+    line-height: normal;
   }
 }
 
@@ -61,5 +63,7 @@ code {
   background-color: #35495e;
   color: #f6f4e6;
   padding: 4px 6px;
+  margin: 2px;
+  line-height: 2rem;
   border-radius: 5px;
 }
