--- a/css/main.css
+++ b/css/main.css
@@ -742,6 +742,14 @@ code {
   border-radius: 5px;
 }
 
+img ~ em {
+  color: #718096;
+  font-size: 1rem;
+  margin-top: 0.8rem;
+  display: block;
+  text-align: center;
+}
+
 #sidebar {
   width: 100%;
 }
