--- a/resources/sass/base/_typography.scss
+++ b/resources/sass/base/_typography.scss
@@ -68,3 +68,11 @@ code {
   line-height: 2rem;
   border-radius: 5px;
 }
+
+img ~ em {
+  color: #718096;
+  font-size: 1rem;
+  margin-top: 0.8rem;
+  display: block;
+  text-align: center;
+}
