Add filter to capitalize every word in a sentence

--- a/site/tags.njk
+++ b/site/tags.njk
@@ -17,7 +17,7 @@ permalink: /category/{{ category }}/
 
     <section id="container-centre" class="column centre flex-1">
 
-        <h1 class="page-title text-purple-900 text-3xl md:text-center md:text-5xl mb-16 lg:mb-24 lg:text-6xl">Category — {{ category | capitalize }}</h1>
+        <h1 class="page-title text-purple-900 text-3xl md:text-center md:text-5xl mb-16 lg:mb-24 lg:text-6xl">{{ category | capitalizeWords }}</h1>
 
         <div class="posts">
 
