--- a/site/includes/layouts/post.njk
+++ b/site/includes/layouts/post.njk
@@ -32,7 +32,7 @@ layout: default
 
                             {%- if item != "blog" -%}
 
-                                <a href="/category/{{ item }}">{{ comma() }} {{ item | capitalize }}</a>
+                                <a href="/category/{{ item }}">{{ comma() }} {{ item | capitalizeWords }}</a>
 
                             {%- endif -%}
 
@@ -77,7 +77,7 @@ layout: default
                         {%- if item != "blog" -%}
 
                             <li class="mr-2">
-                                <a class="inline-block border border-teal-300 px-4 py-2 text-teal-500 text-xs font-semibold rounded hover:text-white hover:bg-teal-500 hover:border-teal-500" href="/category/{{ item }}">{{ item | capitalize }}</a>
+                                <a class="inline-block border border-teal-300 px-4 py-2 text-teal-500 text-xs font-semibold rounded hover:text-white hover:bg-teal-500 hover:border-teal-500" href="/category/{{ item }}">{{ item | capitalizeWords }}</a>
                             </li>
 
                         {%- endif -%}
