--- a/site/index.njk
+++ b/site/index.njk
@@ -13,7 +13,7 @@ subtitle: Make yourself at home...
 
     <section id="container-centre" class="column centre flex-1">
 
-        <h1 class="page-title text-center md:text-left">{{ title }}</h1>
+        <h1 class="page-title">{{ title }}</h1>
 
         <div class="content">
 
