Add twitch channel link in sidebar

--- a/site/includes/components/sidebar.njk
+++ b/site/includes/components/sidebar.njk
@@ -14,6 +14,9 @@
         <div class="m-1"><img class="w-5 h-5 inline" src="images/icons/github.svg" />
         <a href="https://github.com/miltage">Miltage</a></div>
 
+        <div class="m-1"><img class="w-5 h-5 inline" src="images/icons/twitch.svg" />
+        <a href="https://twitch.tv/miltage">Miltage</a></div>
+
         {% if meta_title != 'Home' %}
         <div class="my-6"><img class="w-4 h-4 inline mr-1" src="images/icons/back.svg" />
         <a href="/">Back to home</a></div>
