Add Newgrounds link

--- a/site/includes/components/sidebar.njk
+++ b/site/includes/components/sidebar.njk
@@ -12,10 +12,13 @@
         <a href="https://twitter.com/miltage">@miltage</a></div>
 
         <div class="m-1"><img class="w-5 h-5 inline" src="images/icons/github.svg" />
-        <a href="https://github.com/miltage">Miltage</a></div>
+        <a href="https://github.com/miltage">Github</a></div>
 
         <div class="m-1"><img class="w-5 h-5 inline" src="images/icons/twitch.svg" />
-        <a href="https://twitch.tv/miltage">Miltage</a></div>
+        <a href="https://twitch.tv/miltage">Twitch</a></div>
+
+        <div class="m-1"><img class="w-5 h-5 inline" src="images/icons/newgrounds.svg" />
+        <a href="https://miltage.newgrounds.com/">Newgrounds</a></div>
 
         {% if meta_title != 'Home' %}
         <div class="my-6"><img class="w-4 h-4 inline mr-1" src="images/icons/back.svg" />
