--- a/resources/sass/components/_form.scss
+++ b/resources/sass/components/_form.scss
@@ -31,7 +31,7 @@
 
     .input,
     .textarea {
-        @apply border border-gray-200 rounded p-3 w-full transition;
+        @apply border border-gray-200 rounded p-3 w-full;
 
         &:focus {
             @apply border-pink-500 outline-none;
