--- a/resources/sass/components/_form.scss
+++ b/resources/sass/components/_form.scss
@@ -33,6 +33,8 @@
     .textarea {
         @apply border border-gray-200 rounded p-3 w-full;
 
+        transition: all .4s;
+
         &:focus {
             @apply border-pink-500 outline-none;
         }
