--- a/resources/sass/base/_utilities.scss
+++ b/resources/sass/base/_utilities.scss
@@ -26,5 +26,10 @@
 
 // 'container' helper class
 .inner {
-    @apply w-full max-w-6xl ml-auto mr-auto px-6;
+    @apply w-full ml-auto mr-auto px-6;
+}
+
+.wrapper {
+    max-width: 1500px;
+    margin: 0 auto;
 }
