--- a/resources/sass/components/_form.scss
+++ b/resources/sass/components/_form.scss
@@ -33,7 +33,7 @@
     .textarea {
         @apply border border-gray-200 rounded p-3 w-full;
 
-        transition: all .4s;
+        transition: 0.25s all ease-out;
 
         &:focus {
             @apply border-pink-500 outline-none;
