--- a/site/includes/components/sidebar.njk
+++ b/site/includes/components/sidebar.njk
@@ -1,5 +1,5 @@
 <section id="sidebar" class="column m-0 p-0 md:ml-6 md:pt-20 text-center">
-    <div class="md:fixed">
+    <div class="content">
 
         <div class="avatar w-40 h-40"></div>
 
