Make pre tag responsive

--- a/resources/sass/base/_typography.scss
+++ b/resources/sass/base/_typography.scss
@@ -55,6 +55,9 @@ pre {
   border-radius: 5px;
   padding: 10px 15px;
   margin-bottom: 30px;
+  white-space: pre-wrap;
+  word-wrap: break-word;
+  text-align: justify;
   
   code {
     padding: 0;
