--- a/site/includes/layouts/default.njk
+++ b/site/includes/layouts/default.njk
@@ -37,6 +37,10 @@
         </script>
     {% endif %}
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.20.0/components/prism-core.min.js" defer></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.20.0/plugins/autoloader/prism-autoloader.min.js" defer></script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.20.0/themes/prism.min.css" rel="stylesheet" />
+
     {# include social meta tags #}
     {% include "components/social-meta.njk" %}
 
