--- a/site/includes/layouts/post.njk
+++ b/site/includes/layouts/post.njk
@@ -70,7 +70,7 @@ layout: default
             {# category links list #}
             {% if tags %}
 
-                <ul class="flex pt-4 flex-col text-center md:flex-row md:text-left">
+                <ul class="tags flex pt-4 flex-col text-center md:flex-row md:text-left">
 
                     {% for item in tags %}
 
