--- a/resources/sass/base/_typography.scss
+++ b/resources/sass/base/_typography.scss
@@ -34,6 +34,15 @@ h2 {
       }
     }
   }
+
+  ul {
+    list-style: inside;
+    margin-bottom: 2rem;
+  }
+
+  ul.tags {
+    list-style: none;
+  }
 }
 
 // content breakers
