--- a/site/includes/components/sidebar.njk
+++ b/site/includes/components/sidebar.njk
@@ -20,6 +20,9 @@
         <div class="m-1"><img class="w-5 h-5 inline" src="images/icons/newgrounds.svg" />
         <a href="https://miltage.newgrounds.com/">Newgrounds</a></div>
 
+        <div class="m-1"><img class="w-5 h-5 inline" src="images/icons/patreon.svg" />
+        <a href="https://www.patreon.com/miltage">Patreon</a></div>
+
         {% if meta_title != 'Home' %}
         <div class="my-6"><img class="w-4 h-4 inline mr-1" src="images/icons/back.svg" />
         <a href="/">Back to home</a></div>
