--- a/site/index.njk
+++ b/site/index.njk
@@ -3,8 +3,8 @@ layout: default
 meta_title: Home
 meta_description: Personal site of Robert Shenton
 body_class: home
-title: Howdy, stranger!
-subtitle: Feel free to poke around...
+title: Hey friend!
+subtitle: Below you'll find a collection of my efforts. The writings of a genius or ramblings of a raved lunatic? You decide.
 ---
 
 <main id="main" class="main inner flex flex-1 flex-col md:flex-row justify-around py-10 lg:py-20 focus:outline-none" tabindex="-1">
