--- a/site/index.njk
+++ b/site/index.njk
@@ -40,7 +40,7 @@ subtitle: Below you'll find a collection of my efforts. The writings of a genius
 
                 {% for post in collections.blog %}
 
-                <li class="mb-1"><a href="{{ post.url }}">{{ post.data.date | htmlDateDisplay + ' - ' + post.data.title }}</a></li>
+                <li class="mb-1"><a href="{{ post.url }}">{{ post.data.date | htmlDateDisplay + ' — ' + post.data.title }}</a></li>
 
                 {% endfor %}
 
