--- a/site/includes/layouts/default.njk
+++ b/site/includes/layouts/default.njk
@@ -40,6 +40,16 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.20.0/components/prism-core.min.js" defer></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.20.0/plugins/autoloader/prism-autoloader.min.js" defer></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.20.0/themes/prism.min.css" rel="stylesheet" />
+    <script src="https://unpkg.com/@popperjs/core@2"></script>
+    <script src="https://unpkg.com/tippy.js@6"></script>
+    <link rel="stylesheet" href="https://unpkg.com/tippy.js@6/animations/scale.css" />
+
+    <script>
+        window.onload = function() {
+            tippy.setDefaultProps({ delay: 0, animation: 'scale', inertia: true, offset: [0, 20] });
+            tippy('[data-tippy-content]');
+        }
+    </script>
 
     {# include social meta tags #}
     {% include "components/social-meta.njk" %}
