Add ios and android short codes

--- a/resources/sass/base/_links.scss
+++ b/resources/sass/base/_links.scss
@@ -14,6 +14,12 @@ a {
             @apply text-teal-500;
         }
     }
+
+    &.mobile img {
+        display: inline;
+        margin: 0;
+        margin-right: 5px;
+    }
 }
 
 
