--- a/resources/sass/base/_links.scss
+++ b/resources/sass/base/_links.scss
@@ -17,8 +17,7 @@ a {
 
     &.mobile img {
         display: inline;
-        margin: 0;
-        margin-right: 5px;
+        margin: 5px;
     }
 }
 
