--- a/resources/sass/base/_utilities.scss
+++ b/resources/sass/base/_utilities.scss
@@ -33,3 +33,9 @@
     max-width: 1500px;
     margin: 0 auto;
 }
+
+@media screen and (max-width: 767px) {
+    main {
+        flex-direction: column-reverse !important;
+    }
+}
