Add styles for rendering videos in blog posts

--- a/resources/sass/base/_global.scss
+++ b/resources/sass/base/_global.scss
@@ -1,2 +1,9 @@
 
 //==========  Globals ==========//
+
+
+figure.video_container {
+    margin: auto;
+    margin-bottom: 30px;
+    width: 100%;
+}
