Add link to Discord server

--- a/site/includes/components/sidebar.njk
+++ b/site/includes/components/sidebar.njk
@@ -26,6 +26,9 @@
         <div class="m-1"><img class="w-5 h-5 inline" src="images/icons/ko-fi.svg" />
         <a href="https://ko-fi.com/miltage">Ko-fi</a></div>
 
+        <div class="m-1"><img class="w-5 h-5 inline" src="images/icons/discord.svg" />
+        <a href="https://discord.gg/2TugD2rMM4">Discord</a></div>
+
         {% if meta_title != 'Home' %}
         <div class="my-6"><img class="w-4 h-4 inline mr-1" src="images/icons/back.svg" />
         <a href="/">Back to home</a></div>
