Add margin below location pin

--- a/site/includes/components/sidebar.njk
+++ b/site/includes/components/sidebar.njk
@@ -6,7 +6,7 @@
         <h2>Robert Shenton</h2>
         <p>Programmer, writer, game developer</p>
 
-        <div><img class="w-5 h-5 inline" src="images/icons/pin.svg" /> Cape Town</div>
+        <div class="m-4"><img class="w-5 h-5 inline" src="images/icons/pin.svg" /> Cape Town</div>
 
         <div class="m-1"><img class="w-5 h-5 inline" src="images/icons/twitter.svg" />
         <a href="https://twitter.com/miltage">@miltage</a></div>
