--- a/resources/sass/base/_typography.scss
+++ b/resources/sass/base/_typography.scss
@@ -52,6 +52,15 @@ h2 {
     li {
       padding-left: 0.6rem;
     }
+    
+    &.index {
+      list-style: none;
+      margin-left: 0rem;
+
+      li {
+        padding-left: 0rem;
+      }
+    }
   }
 }
 
