--- a/site/index.njk
+++ b/site/index.njk
@@ -40,7 +40,7 @@ subtitle: Below you'll find a collection of my efforts. The scribblings of a gen
 
             <h2 class="text-3xl">Musings</h2>
 
-            <ol>
+            <ol class="index">
 
                 {% for post in collections.blog %}
 
