--- a/site/includes/components/social-meta.njk
+++ b/site/includes/components/social-meta.njk
@@ -1,19 +1,19 @@
 {# Google Schema #}
-<meta itemprop="name" content="{% if meta_title %}{{ meta_title }}{% else %}{{ title }}{% endif %} | {{ site.name }}">
+<meta itemprop="name" content="{% if meta_title %}{{ meta_title }}{% else %}{{ title }}{% endif %}">
 <meta itemprop="description" content="{% if meta_description %}{{ meta_description }}{% else %}{{ excerpt }}{% endif %}">
 
 {# Twitter #}
 <meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:title" content="{% if meta_title %}{{ meta_title }}{% else %}{{ title }}{% endif %} | {{ site.name }}">
+<meta name="twitter:title" content="{% if meta_title %}{{ meta_title }}{% else %}{{ title }}{% endif %}">
 <meta name="twitter:description" content="{% if meta_description %}{{ meta_description }}{% else %}{{ excerpt }}{% endif %}">
 <meta name="twitter:site" content="{{ site.author.handle }}">
 <meta name="twitter:creator" content="{{ site.author.handle }}">
-<meta name="twitter:image:src" content="{{ site.url }}{{ site.images.twitter }}">
+<meta name="twitter:image:src" content="{{ site.url }}{{ featured_image }}">
 
 {# Open Graph #}
-<meta name="og:title" content="{% if meta_title %}{{ meta_title }}{% else %}{{ title }}{% endif %} | {{ site.name }}">
+<meta name="og:title" content="{% if meta_title %}{{ meta_title }}{% else %}{{ title }}{% endif %}">
 <meta name="og:description" content="{% if meta_description %}{{ meta_description }}{% else %}{{ excerpt }}{% endif %}">
-<meta name="og:image" content="{{ site.url }}{{ site.images.og }}">
+<meta name="og:image" content="{{ site.url }}{{ featured_image }}">
 <meta name="og:url" content="{{ site.url }}{{ page.url }}">
 <meta name="og:site_name" content="{{ site.name }}">
 <meta name="og:locale" content="en_GB">
