Add Mastodon profile link

--- a/site/includes/components/sidebar.njk
+++ b/site/includes/components/sidebar.njk
@@ -11,6 +11,9 @@
         <div class="m-1"><img class="w-5 h-5 inline" src="images/icons/twitter.svg" />
         <a href="https://twitter.com/miltage">@miltage</a></div>
 
+        <div class="m-1"><img class="w-5 h-5 inline" src="images/icons/mastodon.svg" />
+        <a rel="me" href="https://mastodon.gamedev.place/@miltage">Mastodon</a></div>
+
         <div class="m-1"><img class="w-5 h-5 inline" src="images/icons/github.svg" />
         <a href="https://github.com/miltage">Github</a></div>
 
