--- a/site/includes/layouts/default.njk
+++ b/site/includes/layouts/default.njk
@@ -26,14 +26,14 @@
         <script src="/js/main.js" defer></script>
     {% else %}
         <script src="/js/main.min.js" defer></script>
-        <!-- Global site tag (gtag.js) - Google Analytics -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-34714917-1"></script>
+        <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-4LCNX1BJ53"></script>
         <script>
-          window.dataLayer = window.dataLayer || [];
-          function gtag(){dataLayer.push(arguments);}
-          gtag('js', new Date());
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
 
-          gtag('config', 'UA-34714917-1');
+            gtag('config', 'G-4LCNX1BJ53');
         </script>
     {% endif %}
 
