Replace twitter link with bluesky link

--- a/site/includes/components/sidebar.njk
+++ b/site/includes/components/sidebar.njk
@@ -20,8 +20,8 @@
         <div class="m-1"><img class="w-5 h-5 inline" src="images/icons/discord.svg" />
         <a href="https://discord.gg/2TugD2rMM4">Discord</a></div>
 
-        <div class="m-1"><img class="w-5 h-5 inline" src="images/icons/twitter.svg" />
-        <a href="https://twitter.com/miltage">@miltage</a></div>
+        <div class="m-1"><img class="w-5 h-5 inline" src="images/icons/bluesky.svg" />
+        <a href="https://bsky.app/profile/miltage.bsky.social">Bluesky</a></div>
 
         <div class="m-1"><img class="w-5 h-5 inline" src="images/icons/newgrounds.svg" />
         <a href="https://miltage.newgrounds.com/">Newgrounds</a></div>
